--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.1",
     "express": "4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "pg": "^8.7.3",
     "react": "18.1.0",
