feat(content): basic setup

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
     "@date-io/date-fns": "^2.14.0",
+    "@azure/arm-mediaservices": "^12.0.0",
+    "@azure/identity": "^2.1.0",
+    "@azure/storage-blob": "^12.11.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mikro-orm/core": "^5.2.3",
@@ -30,6 +33,7 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -39,7 +43,8 @@
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nrwl/cli": "14.1.9",
