--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "4.17.2",
     "jsonwebtoken": "^8.5.1",
