--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.1",
@@ -28,6 +29,7 @@
     "knex": "^2.1.0",
     "pg": "^8.7.3",
     "react": "18.1.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.2",
     "react-query": "^3.39.1",
