--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./dist/apps/backend/main",
     "start:dev": "nx run-many --target=serve --projects=frontend,backend --parallel=2",
     "build": "nx run-many --target=build --configuration=production --all --parallel=2",
+    "migrations:generate": "ts-node --project ./apps/backend/tsconfig.app.json ./apps/backend/src/app/config/generate-migrations.ts",
     "test": "nx test"
   },
   "engines": {
@@ -18,6 +19,9 @@
     "@auth0/auth0-react": "^1.10.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mikro-orm/core": "^5.2.3",
+    "@mikro-orm/migrations": "^5.2.3",
+    "@mikro-orm/postgresql": "^5.2.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "axios": "^0.27.2",
@@ -25,8 +29,7 @@
     "dotenv": "^16.0.1",
     "express": "4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^2.1.0",
-    "pg": "^8.7.3",
+    "morgan": "^1.10.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.2",
