--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
-    "@date-io/date-fns": "^2.14.0",
     "@azure/arm-mediaservices": "^12.0.0",
     "@azure/identity": "^2.1.0",
     "@azure/storage-blob": "^12.11.0",
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mikro-orm/core": "^5.2.3",
@@ -42,9 +42,11 @@
     "react-hook-form": "^7.32.2",
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
+    "react-use": "^17.4.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nrwl/cli": "14.1.9",
@@ -63,6 +65,7 @@
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-router-dom": "5.3.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
