--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mikro-orm/postgresql": "^5.2.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "apexcharts": "^3.35.3",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "react": "18.1.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.2",
     "react-query": "^3.39.1",
