chore : update sample env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,21 @@
-PG_CONNECTION_STRING=postgres://postgres:abc123@localhost:5432/lumen
+PG_CONNECTION_STRING=postgres://<<username>>:<<password_here>>@localhost:5432/lumen
 PORT=3333
+
+# Azure
+AZURE_CLIENT_ID= ""
+AZURE_CLIENT_SECRET= ""
+AZURE_MEDIA_SERVICES_ACCOUNT_NAME=""
+AZURE_RESOURCE_GROUP=""
+AZURE_SUBSCRIPTION_ID=""
+AZURE_STORAGE_ACCOUNT_NAME = ""
+AZURE_TENANT_DOMAIN= ""
+AZURE_TENANT_ID= ""
+AZURE_ARM_TOKEN_AUDIENCE= ""
+AZURE_ARM_ENDPOINT= ""
+AZURE_USER_ASSIGNED_IDENTITY = ""
+AADENDPOINT=""
+
+AZURE_STORAGE_CONN_STRING=""
+
+# DRM KEY
+DRMSYMMETRICKEY=""
