--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
+    "@azure/arm-mediaservices": "^12.0.0",
+    "@azure/identity": "^2.1.0",
+    "@azure/storage-blob": "^12.11.0",
     "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -31,6 +34,7 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -40,8 +44,11 @@
     "react-hook-form": "^7.32.2",
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
+    "react-use": "^17.4.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nrwl/cli": "14.1.9",
@@ -60,6 +67,7 @@
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-router-dom": "5.3.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
