feat(auth): impliment backend token validation

--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "@mikro-orm/postgresql": "^5.2.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
-    "apexcharts": "^3.35.3",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "4.17.2",
+    "express-jwt": "^7.7.5",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.4",
     "morgan": "^1.10.0",
     "react": "18.1.0",
     "react-apexcharts": "^1.4.0",
