--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@mikro-orm/postgresql": "^5.2.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
-    "apexcharts": "^3.35.3",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.28.0",
@@ -40,6 +40,8 @@
     "morgan": "^1.10.0",
     "react": "18.1.0",
     "react-apexcharts": "^1.4.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.2",
     "react-query": "^3.39.1",
