--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start:dev": "nx run-many --target=serve --projects=frontend,backend --parallel=2",
     "build": "nx run-many --target=build --configuration=production --all --parallel=2",
     "migrations:generate": "ts-node --project ./apps/backend/tsconfig.app.json ./apps/backend/src/app/config/generate-migrations.ts",
+    "seed:generate": "ts-node --project ./apps/backend/tsconfig.app.json ./apps/backend/src/app/config/generate-seeder.ts",
+    "seed:run": "ts-node --project ./apps/backend/tsconfig.app.json ./apps/backend/src/app/config/run-seed.ts",
     "test": "nx test"
   },
   "engines": {
@@ -26,10 +28,11 @@
     "@mikro-orm/core": "^5.2.3",
     "@mikro-orm/migrations": "^5.2.3",
     "@mikro-orm/postgresql": "^5.2.3",
+    "@mikro-orm/seeder": "^5.2.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
-    "apexcharts": "^3.35.3",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.28.0",
