--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@tiptap/react": "^2.0.0-beta.114",
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
