--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@mikro-orm/postgresql": "^5.2.3",
     "@mikro-orm/seeder": "^5.2.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.5",
+    "@types/inline-css": "^3.0.1",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
