--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.5",
-    "@types/inline-css": "^3.0.1",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@types/inline-css": "^3.0.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
@@ -51,6 +51,7 @@
     "react-router-dom": "6.3.0",
     "react-use": "^17.4.0",
     "regenerator-runtime": "0.13.7",
+    "stripe": "^9.15.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
