--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "react": "18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.1.0",
