--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.5",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@tiptap/react": "^2.0.0-beta.114",
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
     "@types/inline-css": "^3.0.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
@@ -46,8 +48,10 @@
     "nodemailer": "^6.7.7",
     "react": "18.1.0",
     "react-apexcharts": "^1.4.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.32.2",
+    "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
     "react-use": "^17.4.0",
