--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.5",
-    "@types/inline-css": "^3.0.1",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@types/inline-css": "^3.0.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
@@ -50,6 +50,7 @@
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
     "react-use": "^17.4.0",
+    "react-use-file-upload": "^0.9.5",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
