chore: update ts-config

--- a/apps/frontend/tsconfig.app.json
+++ b/apps/frontend/tsconfig.app.json
@@ -6,8 +6,7 @@
   },
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
-    "../../node_modules/@nrwl/react/typings/image.d.ts",
-    "./src/app/pages/student/course-viewer/CourseNav.tsx"
+    "../../node_modules/@nrwl/react/typings/image.d.ts"
   ],
   "exclude": [
     "jest.config.ts",
