--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.28.0",
+    "disable-devtool": "^0.2.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "4.17.2",
