--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.5",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@react-spring/parallax": "^9.5.2",
     "@tiptap/react": "^2.0.0-beta.114",
     "@tiptap/starter-kit": "^2.0.0-beta.191",
     "@types/inline-css": "^3.0.1",
@@ -56,6 +57,7 @@
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
+    "react-spring": "^9.5.2",
     "react-use": "^17.4.0",
     "regenerator-runtime": "0.13.7",
     "stripe": "^9.15.0",
