--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jwks-rsa": "^2.1.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
+    "react-timer-hook": "^3.0.5",
     "react-use": "^17.4.0",
     "regenerator-runtime": "0.13.7",
     "stripe": "^9.15.0",
@@ -77,7 +78,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
-    "@types/react": "18.0.8",
+    "@types/react": "^18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^8.3.4",
