--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jwks-rsa": "^2.1.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
+    "pdf-lib": "^1.17.1",
     "react": "18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dnd": "^16.0.1",
