feat:form(frontend)

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
     "react-router-dom": "6.3.0",
