--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "regenerator-runtime": "0.13.7",
     "stripe": "^9.15.0",
     "tslib": "^2.3.0",
+    "use-debounce": "^8.0.3",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
