feat/course-progress-tracking (#77)
* fix(payments): fix payment gateway

* feat(frontend): dark mode toggle

* feat(course): ui improvements

* feat(courses): mark as completed

* fix(course): course enrollment

* feat(org): org settings UIs

* feat(org): update billing page

* feat(billing): billing page improvements

* feat(content): sign asset urls

* fix(content): add sas fallback

* fix(ui): update sample data

* feat: add pricing page

* feat(org): connect backend to org settings

* fix(course): connect course settings to backend

* feat(course): UI updates

--- a/.env.sample
+++ b/.env.sample
@@ -20,6 +20,10 @@ AZURE_STORAGE_CONN_STRING=""
 # DRM KEY
 DRMSYMMETRICKEY=""
 
+# Payment Gateway
+STRIPE_SK=""
+STRIPE_PK=""
+
 # EMAILS
 MAILJET_KEY=""
 MAILJET_SECRET=""
